@@ -398,6 +398,10 @@ public class GroupManager extends JavaPlugin {
 					sender.sendMessage(ChatColor.RED + "Group not found!");
 					return false;
 				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "Players may not be members of GlobalGroups directly.");
+					return false;
+				}
 
 				// VALIDANDO PERMISSAO
 				if (!isConsole && !isOpOverride && (senderGroup != null ? permissionHandler.inGroup(auxUser.getName(), senderGroup.getName()) : false)) {
@@ -1232,6 +1236,10 @@ public class GroupManager extends JavaPlugin {
 					sender.sendMessage(ChatColor.RED + "Group does not exists!");
 					return false;
 				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "GlobalGroups do NOT support Info Nodes.");
+					return false;
+				}
 				// VALIDANDO PERMISSAO
 				// PARECE OK
 				auxString = "";
@@ -1261,6 +1269,10 @@ public class GroupManager extends JavaPlugin {
 					sender.sendMessage(ChatColor.RED + "Group does not exists!");
 					return false;
 				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "GlobalGroups do NOT support Info Nodes.");
+					return false;
+				}
 				// VALIDANDO PERMISSAO
 				if (!auxGroup.getVariables().hasVar(args[1])) {
 					sender.sendMessage(ChatColor.RED + "The group doesn't have directly that variable!");
@@ -1284,6 +1296,10 @@ public class GroupManager extends JavaPlugin {
 				auxGroup = dataHolder.getGroup(args[0]);
 				if (auxGroup == null) {
 					sender.sendMessage(ChatColor.RED + "Group does not exists!");
+					return false;
+				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "GlobalGroups do NOT support Info Nodes.");
 					return false;
 				}
 				// VALIDANDO PERMISSAO
@@ -1321,6 +1337,10 @@ public class GroupManager extends JavaPlugin {
 				auxGroup = dataHolder.getGroup(args[0]);
 				if (auxGroup == null) {
 					sender.sendMessage(ChatColor.RED + "Group does not exists!");
+					return false;
+				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "GlobalGroups do NOT support Info Nodes.");
 					return false;
 				}
 				// VALIDANDO PERMISSAO
@@ -1588,6 +1608,10 @@ public class GroupManager extends JavaPlugin {
 					sender.sendMessage(ChatColor.RED + "Group not found!");
 					return false;
 				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "Players may not be members of GlobalGroups directly.");
+					return false;
+				}
 				// VALIDANDO PERMISSAO
 				if (!isConsole && !isOpOverride && (senderGroup != null ? permissionHandler.inGroup(auxUser.getName(), senderGroup.getName()) : false)) {
 					sender.sendMessage(ChatColor.RED + "Can't modify player with same permissions than you, or higher.");
@@ -1642,6 +1666,10 @@ public class GroupManager extends JavaPlugin {
 				auxGroup = dataHolder.getGroup(args[1]);
 				if (auxGroup == null) {
 					sender.sendMessage(ChatColor.RED + "Group not found!");
+					return false;
+				}
+				if (auxGroup.isGlobal()) {
+					sender.sendMessage(ChatColor.RED + "Players may not be members of GlobalGroups directly.");
 					return false;
 				}
 				// VALIDANDO PERMISSAO
